Structure Box Placement

--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,61 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    color: rgb(251, 252, 255);
-    background-color: rgb(108, 100, 139);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: rgb(251, 252, 255);
+  background-color: rgb(108, 100, 139);
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 h1 {
-    background-color: rgb(107, 186, 167);
-    text-transform:uppercase;
-    text-align: center;
-    font-size: 300%;
+  background-color: rgb(107, 186, 167);
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 300%;
 }
 
 #rgbSpan {
-    font-size: 200%;
+  font-size: 200%;
 }
 
 #statusBar {
-    background-color: rgb(182, 161, 158);
-    text-align: center;
-    height: 50px;
-    width: 100%;
+  background-color: rgb(182, 161, 158);
+  text-align: center;
+  height: 50px;
+  width: 100%;
 }
 
 .status {
-    width: 20%;
-    display: inline-block;
-    font-weight: bold;
+  width: 20%;
+  display: inline-block;
+  font-weight: bold;
 }
 
 button {
-    background-color: rgb(251, 161, 0);
-    color: rgb(251, 252, 255);
-    border: none;
-    font-weight: 600;
-    padding: 10px;
-    margin-top: 7px;
-    text-transform: uppercase;
+  background-color: rgb(251, 161, 0);
+  color: rgb(251, 252, 255);
+  border: none;
+  font-weight: 600;
+  padding: 10px;
+  margin-top: 7px;
+  text-transform: uppercase;
+}
+
+.mainBox {
+    width: 600px;
+    margin: 0 auto;
+    padding-top: 2%;
+}
+
+.box {
+    background-color: rgb(251, 252, 255);
+    width: 30%;
+    padding-bottom: 30%;
+    margin: 1.5%;
+    border-radius: 20%;
+    float: left;
 }
